[project]
name = "fastapi-testing"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Max" }]
dependencies = [
    "fastapi[standard]>=0.115.5",
    "sqlalchemy[asyncio]>=2.0.35",
    "psycopg2>=2.9.10",
    "asyncpg>=0.30.0",
    "sqlmodel>=0.0.22",
]
readme = "README.md"
requires-python = ">= 3.8"


[tool.rye.scripts]
test = "rye run pytest"
dev = "fastapi dev src/fastapi_testing/main.py"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["pytest>=8.3.3", "pytest-asyncio>=0.24.0"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_testing"]
